convert/objects/Payments__c.object
<CustomObject>
    <label>Paymentk</label>
    <nameField>
        <displayFormat>P-{000}</displayFormat>
        <label>Payment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Paymentsk</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer custom</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Paymentsk</relationshipLabel>
        <relationshipName>Paymentsk</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>field_status__c</fullName>
        <label>field status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>pending</fullName>
                </value>
                <value>
                    <fullName>approved</fullName>
                </value>
                <value>
                    <fullName>rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paymentk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Paymentk</label>
        <referenceTo>Payments__c</referenceTo>
        <relationshipLabel>Paymentsk</relationshipLabel>
        <relationshipName>Paymentsk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>Time</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>